--- a/default.css
+++ b/default.css
@@ -461,7 +461,7 @@
 	
 	#menu .current_page_item a
 	{
-		background: #2980b9;
+		background: #f2986d;
 		color: rgba(255,255,255,1);
 	}
 	
@@ -498,7 +498,7 @@
 		width: 800px;
 		padding: 3em 50px 5em 50px;
 		background: #FFF;
-		border-top: 6px solid #2980b9;
+		border-top: 6px solid #f2986d;
 		text-align: center;
 	}
 
