--- a/default.css
+++ b/default.css
@@ -107,10 +107,10 @@
 	{
 		margin: 0 auto;
 		padding: 0;
-		width: 80%;
+		width: 100%;
 		overflow: hidden;
 		list-style: none;
-		text-align: left;
+		text-align: ;
 		color: #FFFFFD
 	}
 	
